[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "everestapi"
version = "0.1.2"
description = "Python SDK for the EverestQuant prediction tournament platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "EverestQuant", email = "dev@everestquant.ai" }]
keywords = ["quant", "tournament", "prediction", "staking", "machine-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.27.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-httpx>=0.34.0"]

[project.scripts]
everestapi = "everestapi.cli:cli"

[project.urls]
Homepage = "https://everestquant.ai"
Documentation = "https://docs.everestquant.ai"
Repository = "https://github.com/mpprice/everestapi"

[tool.setuptools.packages.find]
where = ["src"]
